# build-system

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  PROGRESS.md  PROMPTS.md  README.md  REQUIREMENTS.md
.reference/: openai_client_request.json
.reference/ai_responses/: stream_response_1738196744.txt  stream_response_1738196796.txt  stream_response_1738196847.txt  stream_response_1738197015.txt  stream_response_1738197074.txt  stream_response_1738197115.txt  stream_response_1738197474.txt  stream_response_1738197527.txt  task_response_1738196736.txt  task_response_1738196744.txt  task_response_1738196795.txt  task_response_1738196796.txt  task_response_1738196846.txt  task_response_1738196847.txt  task_response_1738197014.txt  task_response_1738197074.txt  task_response_1738197115.txt  task_response_1738197467.txt  task_response_1738197527.txt
.reference/inference_example/: inference_request.py
.reference/templates/: web_app.json
docs/: INFERENCE_ARCHITECTURE.md  INTEGRATION.md  PROGRESS.md  PROJECT_GENERATOR_ARCHITECTURE.md  STATE_MANAGEMENT_ARCHITECTURE.md  TOOLS_ARCHITECTURE.md  cli_inference_commands.md  project_config_template.md  prompt_storage_cli.md
docs/cli/: ARCHITECTURE.md  PROGRESS.md  PROMPTS.md  SPECS.md
docs/doc/: ARCHITECTURE.md  PROGRESS.md  PROMPTS.md  SPECS.md
docs/prompt/: ARCHITECTURE.md  PROGRESS.md  PROMPTS.md  SPECS.md
docs/state/: ARCHITECTURE.md  PROGRESS.md  PROMPTS.md  SPECS.md
docs/tasks/: CLI_INTERFACE.md  EXECUTION_PIPELINE.md  PROMPT_MANAGEMENT.md
examples/: ai_project_generation.rs  project_generation.rs  tool_system_demo.rs  web_app_prompt.json  web_app_prompt_schema.json
openai-streaming-client/: README.md
openai-streaming-client/src/: error_handler.py  logging_config.py  main.py
prompts/: ARCHITECTURE.md  SYSTEM_PROMPT.md  TOOLS.md
src/: inference.rs  inference_test.rs  lib.rs  main.rs  project_generator.rs
src/cli/: mod.rs  tests.rs  tools.rs
src/config/: mod.rs
src/doc/: error.rs  mod.rs  types.rs
src/error/: mod.rs
src/inference/: mod.rs
src/llm/: mod.rs
src/logging/: mod.rs
src/prompt/: error.rs  generator.rs  mod.rs  project_generation.rs  project_generation.txt  project_generation_prompt.md  storage.rs  types.rs
src/prompt/templates/: project_generation.txt  project_generation_prompt.md  task_execution_prompt.txt
src/state/: dependency.rs  error.rs  events.rs  manager.rs  mod.rs  tests.rs  types.rs
src/tools/: build.rs  mod.rs  project.rs
src/validation/: mod.rs
task-tracker/: Cargo.toml  README.md
task-tracker/migrations/: 20240128_create_tasks_table.sql
task-tracker/src/: db.rs  main.rs  routes.rs
task-tracker/tests/: integration_tests.rs
tests/: mod.rs  prompt_storage_test.rs
tests/cli/: mod.rs
tests/doc/: mod.rs
tests/inference/: mod.rs
tests/integration/: mod.rs
tests/prompt/: mod.rs
tests/state/: mod.rs
tools/: check_project.py
