[package]
name = "build-system"
version = "0.1.0"
edition = "2021"
authors = ["Codeium"]
description = "An LLM-powered build system with documentation-driven development"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
dotenv = "0.15"
clap = { version = "4.3.0", features = ["derive"] }
thiserror = "1.0.40"
tempfile = "3.5.0"
tracing-subscriber = "0.3"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3.3", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
mockall = "0.11.4"
anyhow = "1.0"
async-trait = "0.1"
