[package]
name = "build-system"
version = "0.1.0"
edition = "2021"

[lib]
name = "build_system"
path = "src/lib.rs"

[[bin]]
name = "build-system"
path = "src/main.rs"

[dependencies]
# Core dependencies
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
regex = "1.10"
thiserror = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }

# AI and ML dependencies
async-openai = "0.20"
tiktoken-rs = "0.5"
reqwest = { version = "0.11", features = ["json", "multipart", "rustls-tls"] }
url = "2.4"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Templating and code generation
tera = "1.19"
handlebars = "4.5"

# Serialization and parsing
toml = "0.8"
yaml-rust = "0.4"

# Filesystem and path handling
walkdir = "2.4"

# Cryptography and security
rust-argon2 = "2.0"
base64 = "0.21"

# Error handling
color-eyre = "0.6"

# Environment variables
dotenv = "0.15"

[dev-dependencies]
mockall = "0.11"
tempfile = "3.3"
rstest = "0.18"

[features]
default = []
ai-features = []
web-features = []
