[package]
name = "build-system"
version = "0.1.0"
edition = "2021"

[lib]
name = "build_system"
path = "src/lib.rs"

[[bin]]
name = "build-system"
path = "src/main.rs"

[dependencies]
# Core dependencies
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full", "test-util"] }
regex = "1.10"
thiserror = "1.0"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
dirs = "5.0.1"
once_cell = "1.19.0"

# AI and ML dependencies
async-openai = "0.20"
tiktoken-rs = "0.5"
reqwest = { version = "0.11", features = ["json", "multipart", "rustls-tls"], default-features = false }
url = "2.4"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Templating and code generation
tera = "1.19"
handlebars = "4.5"

# Serialization and parsing
toml = "0.8"
yaml-rust = "0.4"
jsonschema = { version = "0.17.1", default-features = false }

# Filesystem and path handling
walkdir = "2.4"

# Storage
sled = "0.34"

# Testing
mockall = "0.11.3"

# Error handling and utilities
dotenv = "0.15"

[dev-dependencies]
tempfile = "3.3"
predicates = "3.0"

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
web-features = []
ai-features = []
